# rust_match_any

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
tests/: integration_test.rs
